# secure-pass-zavrsni-projekat

./: .gitignore  build_swift_android.sh
SecurePassAndroid/: settings.gradle.kts
SecurePassAndroid/app/: build.gradle.kts
SecurePassAndroid/app/src/main/: AndroidManifest.xml
SecurePassAndroid/app/src/main/cpp/: CMakeLists.txt  securepass_engine.c  securepass_jni_bridge.c
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/: MainActivity.kt  SecurePassApplication.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/data/api/: ApiModels.kt  AuthInterceptor.kt  RetrofitClient.kt  SecurePassApi.kt  TokenHolder.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/data/local/: TokenManager.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/data/repository/: AuthRepository.kt  VaultRepository.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/native/: SecurePassNative.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/security/: BiometricHelper.kt  NetworkUtils.kt  PwnedNetworkDiagnostics.kt  PwnedPasswordChecker.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/: PasswordViewModel.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/auth/: AuthScreen.kt  AuthViewModel.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/components/: AuthDecorations.kt  CustomTextField.kt  FloatingBottomNav.kt  GeneratorComponents.kt  GradientButton.kt  PlatformBranding.kt  VaultCard.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/generator/: GeneratorScreen.kt  GeneratorViewModel.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/navigation/: AppNavigation.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
SecurePassAndroid/app/src/main/java/com/nejracoric/securepassandroid/ui/vault/: VaultScreen.kt  VaultViewModel.kt
SecurePassAndroid/app/src/main/res/values/: themes.xml
SecurePassAndroid/gradle/: libs.versions.toml
SecurePassAndroid/gradle/wrapper/: gradle-wrapper.properties
SecurePassBackend/: package-lock.json  package.json
SecurePassBackend/src/: index.ts
SecurePassBackend/src/config/: db.ts
SecurePassBackend/src/middleware/: auth.ts
SecurePassBackend/src/models/: PasswordEntry.ts  User.ts
SecurePassBackend/src/routes/: auth.ts  passwords.ts
SecurePassBackend/src/utils/: encryption.ts  jwt.ts
SecurePassEngine/: Package.swift
SecurePassEngine/Sources/SecurePassEngine/: SecurePassEngine.swift
SecurePassEngine/Tests/SecurePassEngineTests/: SecurePassEngineTests.swift
SecurePassEngine/include/: SecurePassEngine.h
